tests/or_pattern.stderr
error: `variant` cannot match `or` patterns
  --> tests/or_pattern.rs:10:44
   |
10 |     let _ = try_variant!(val, Test { a, b: Some(1) | Some(2) });
   |                                            ^^^^^^^^^^^^^^^^^
